--- a/style1.css
+++ b/style1.css
@@ -34,7 +34,7 @@ body {
   button {
     padding: 10px 16px;
     font-size: 20px;
-    background-color: #34a788de;
+    background-color: black;
     color: white;
     border: black;
     cursor: pointer;
@@ -44,13 +44,13 @@ body {
   }
 
   button:hover {
-    background-color: #4caf78;
+    background-color: black;
   }
   body
     {
      color: white;
- /* background-image: url(i.jpg); */
- background-color: #001134;
+
+ background-image: url(back1.png);
       background-size: cover;
       justify-content: center;
       text-align: center;
